k8s/celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
  namespace: tataredu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      containers:
        - name: beat
          image: backend:latest
          imagePullPolicy: Never
          command: ["celery", "-A", "tatarlang.celery", "beat", "--loglevel=info"]
