k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: tataredu
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
