k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tataredu-ingress
  namespace: tataredu
  labels:
    app.kubernetes.io/part-of: tataredu
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tataredu.test
      secretName: tataredu-tls

  rules:
    - host: tataredu.test
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /redoc
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /media
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /flower
            pathType: Prefix
            backend:
              service:
                name: celery-flower
                port:
                  number: 5555
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
